--- a/style.css
+++ b/style.css
@@ -10,6 +10,6 @@ box-sizing: border-box;
     left: 50%;
     transform: translate(-50%,-50%);
     background: blue;
-    max-width: 100%;
-    max-height: 100%;
+    width: 100%;
+    height: 100%;
 }
