--- a/style.css
+++ b/style.css
@@ -14,6 +14,6 @@ box-sizing: border-box;
     height: 100%;
 }
 
-#layer1, #layer2, #layer3, #layer4 {
+#layer1, #layer2, #layer3, #layer4, #player {
     display:none;
 }
