--- a/style.css
+++ b/style.css
@@ -12,7 +12,10 @@ box-sizing: border-box;
     background: blue;
     width: 100%;
     height: 100%;
+    font-family: "Anta", sans-serif;
 }
+
+
 
 #layer1, #layer2, #layer3, #layer4, #player,#angler1, #angler2, #lucky, #projectile {
     display:none;
